--- a/_kanji/0261.md
+++ b/_kanji/0261.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 場所
-    kana: ばしょ
+    kana: ば・しょ
     translations:
     - ca: lloc
       en: place
       es: lugar
   - word: 工場
-    kana: こうじょう
+    kana: こう・じょう
     translations:
     - ca: fàbrica
       en: factory
       es: fábrica
   - word: 広場
-    kana: ひろば
+    kana: ひろ・ば
     translations:
     - ca: plaça
       en: square
       es: plaza
   - word: 運動場
-    kana: うんどうじょう
+    kana: うん・どう・じょう
     translations:
     - ca: pati (col·legi); camp d'esports
       en: playground
