--- a/_kanji/0262.md
+++ b/_kanji/0262.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 建てる
-    kana: たてる
+    kana: た・てる
     translations:
     - ca: construir
       en: to build
       es: construir
   - word: 建物
-    kana: たてもの
+    kana: たて・もの
     translations:
     - ca: edifici; construcció
       en: building
       es: edificio
   - word: 建築
-    kana: けんちく
+    kana: けん・ちく
     translations:
     - ca: edificació; arquitectura
       en: construction
