--- a/_kanji/0263.md
+++ b/_kanji/0263.md
@@ -23,19 +23,19 @@ compound_words:
       en: thing
       es: cosa; objeto
   - word: 買い物
-    kana: かいもの
+    kana: か・い・もの
     translations:
     - ca: compra
       en: shopping
       es: compra
   - word: 動物
-    kana: どうぶつ
+    kana: どう・ぶつ
     translations:
     - ca: animal
       en: animal
       es: animal
   - word: 荷物
-    kana: にもつ
+    kana: に・もつ
     translations:
     - ca: equipatge; paquet
       en: baggage; luggage
