--- a/_kanji/0264.md
+++ b/_kanji/0264.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 病院
-    kana: びょういん
+    kana: びょう・いん
     translations:
     - ca: hospital
       en: hospital
       es: hospital
   - word: 入院する
-    kana: にゅういんする
+    kana: にゅう・いん・する
     translations:
     - ca: ingressar a l'hospital
       en: to be hospitalized
       es: ingresar en el hospital
   - word: 大学院
-    kana: だいがくいん
+    kana: だい・がく・いん
     translations:
     - ca: escola de postgrau
       en: graduate school
