--- a/_kanji/0265.md
+++ b/_kanji/0265.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 映画館
-    kana: えいがかん
+    kana: えい・が・かん
     translations:
     - ca: cinema
       en: movie theater
       es: cine
   - word: 大使館
-    kana: たいしかん
+    kana: たい・し・かん
     translations:
     - ca: ambaixada
       en: embassy
       es: embajada
   - word: 旅館
-    kana: りょかん
+    kana: りょ・かん
     translations:
     - ca: hotel d'estil japonès
       en: japanese-style hotel
       es: hotel de estilo japonés
   - word: 美術館
-    kana: びじゅつかん
+    kana: び・じゅつ・かん
     translations:
     - ca: museu d'art
       en: art museum
