--- a/_kanji/0266.md
+++ b/_kanji/0266.md
@@ -17,13 +17,13 @@ meaning:
 
 compound_words:
   - word: 食堂
-    kana: しょくどう
+    kana: しょく・どう
     translations:
     - ca: mejador
       en: dining room
       es: comedor
   - word: 講堂
-    kana: こうどう
+    kana: こう・どう
     translations:
     - ca: sala d'actes
       en: auditorium
