--- a/_kanji/0267.md
+++ b/_kanji/0267.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 教室
-    kana: きょうしつ
+    kana: きょう・しつ
     translations:
     - ca: aula
       en: classroom
       es: aula
   - word: 地下室
-    kana: ちかしつ
+    kana: ち・か・しつ
     translations:
     - ca: soterrani
       en: basement
       es: sótano
   - word: 待合室
-    kana: まちあいしつ
+    kana: まち・あい・しつ
     translations:
     - ca: sala d'espera
       en: waiting room
       es: sala de espera
   - word: 事務室
-    kana: じむしつ
+    kana: じ・む・しつ
     translations:
     - ca: oficina
       en: office
