--- a/_kanji/0268.md
+++ b/_kanji/0268.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 工場
-    kana: こうじょう
+    kana: こう・じょう
     translations:
     - ca: fàbrica
       en: factory
       es: fábrica
   - word: 工事
-    kana: こうじ
+    kana: こう・じ
     translations:
     - ca: obra (construcció, &c.)
       en: construction
       es: obra (construcción, &c.)
   - word: 工業
-    kana: こうぎょう
+    kana: こう・ぎょう
     translations:
     - ca: manufactura
       en: manufacturing
       es: manufactura
   - word: 工作
-    kana: こうさく
+    kana: こう・さく
     translations:
     - ca: treball manual
       en: handicraft
