--- a/_kanji/0269.md
+++ b/_kanji/0269.md
@@ -23,19 +23,19 @@ compound_words:
       en: figure
       es: dibujo; ilustración; diagrama
   - word: 地図
-    kana: ちず
+    kana: ち・ず
     translations:
     - ca: mapa
       en: map
       es: mapa
   - word: 図書館
-    kana: としょかん
+    kana: と・しょ・かん
     translations:
     - ca: biblioteca
       en: library
       es: biblioteca
   - word: 合図
-    kana: あいず
+    kana: あい・ず
     translations:
     - ca: senyal
       en: signal
