--- a/_kanji/0270.md
+++ b/_kanji/0270.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 信号
-    kana: しんごう
+    kana: しん・ごう
     translations:
     - ca: senyal; semàfor
       en: signal
       es: señal; semáforo
   - word: 電話番号
-    kana: でんわばんごう
+    kana: でん・わ・ばん・ごう
     translations:
     - ca: número de telèfon
       en: telephone number
       es: número de teléfono
   - word: ３号室
-    kana: さんごうしつ
+    kana: さん・ごう・しつ
     translations:
     - ca: sala núm. 3
       en: room No. 3
       es: sala nº 3
   - word: 号令
-    kana: ごうれい
+    kana: ごう・れい
     translations:
     - ca: ordre; veu de comandament
       en: order; command​
