--- a/_kanji/0271.md
+++ b/_kanji/0271.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 交通
-    kana: こうつう
+    kana: こう・つう
     translations:
     - ca: trànsit
       en: traffic
       es: tráfico
   - word: 交差点
-    kana: こうさてん
+    kana: こう・さ・てん
     translations:
     - ca: cruïlla
       en: crossing
       es: cruce
   - word: 交番
-    kana: こうばん
+    kana: こう・ばん
     translations:
     - ca: comissaria de barri
       en: police box
       es: comisaria de barrio
   - word: 交代
-    kana: こうたい
+    kana: こう・たい
     translations:
     - ca: reemplaçament; substitució
       en: change
