--- a/_kanji/0272.md
+++ b/_kanji/0272.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 通る
-    kana: とおる
+    kana: とお・る
     translations:
     - ca: passar
       en: to go through
       es: pasar
   - word: 通う
-    kana: かよう
+    kana: かよ・う
     translations:
     - ca: anar-hi regularment
       en: to commute
       es: ir regularmente
   - word: 通学
-    kana: つうがく
+    kana: つう・がく
     translations:
     - ca: deplaçament habitual a l'escola
       en: commute to school
       es: desplazamiento habitual a la escuela
   - word: 大通り
-    kana: おおとおり
+    kana: おお・とお・り
     translations:
     - ca: avinguda; carrer principal
       en: main street
