--- a/_kanji/0273.md
+++ b/_kanji/0273.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 動く
-    kana: うごく
+    kana: うご・く
     translations:
     - ca: moure's
       en: to move
       es: moverse
   - word: 運動
-    kana: うんどう
+    kana: うん・どう
     translations:
     - ca: exercici; moviment
       en: exercise
       es: ejercicio; movimiento
   - word: 自動車
-    kana: じどうしゃ
+    kana: じ・どう・しゃ
     translations:
     - ca: automòbil
       en: car; automobile​
       es: automóvil
   - word: 動物
-    kana: どうぶつ
+    kana: どう・ぶつ
     translations:
     - ca: animal
       en: animal
