--- a/_kanji/0274.md
+++ b/_kanji/0274.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 乗る
-    kana: のる
+    kana: の・る
     translations:
     - ca: pujar a un transport
       en: to get on
       es: subir a un transporte
   - word: タクシー乗り場
-    kana: タクシーのりば
+    kana: タクシー・の・り・ば
     translations:
     - ca: parada de taxi
       en: taxi stand
       es: parada de taxi
   - word: 乗車券
-    kana: じょうしゃけん
+    kana: じょう・しゃ・けん
     translations:
     - ca: bitllet de transport
       en: ticket to ride
