--- a/_kanji/0275.md
+++ b/_kanji/0275.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 降りる
-    kana: おりる
+    kana: お・りる
     translations:
     - ca: baixar d'un transport
       en: to get off
       es: bajar de un transporte
   - word: （雨が）降る
-    kana: （あめが）ふる
+    kana: （あめ・が）ふ・る
     translations:
     - ca: ploure
       en: to rain
       es: llover
   - word: 乗り降り
-    kana: のりおり
+    kana: の・り・お・り
     translations:
     - ca: pujar i baixar d'un transport
       en: get on and get off
       es: subir y bajar de un transporte
   - word: 降雨量
-    kana: こううりょう
+    kana: こう・う・りょう
     translations:
     - ca: quantitat de pluja
       en: rainfall
