--- a/_kanji/0276.md
+++ b/_kanji/0276.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 運ぶ
-    kana: はこぶ
+    kana: はこ・ぶ
     translations:
     - ca: transportar
       en: to transport
       es: transportar
   - word: 運動
-    kana: うんどう
+    kana: うん・どう
     translations:
     - ca: exercici; moviment
       en: exercise
       es: ejercicio; movimiento
   - word: 運がいい
-    kana: うんがいい
+    kana: うん・が・いい
     translations:
     - ca: tenir bona sort
       en: lucky
       es: tener buena suerte
   - word: 運賃
-    kana: うんちん
+    kana: うん・ちん
     translations:
     - ca: tarifa de transport
       en: fare
