--- a/_kanji/0277.md
+++ b/_kanji/0277.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 運転する
-    kana: うんてんする
+    kana: うん・てん・する
     translations:
     - ca: conduir
       en: to drive
       es: conducir
   - word: 自転車
-    kana: じてんしゃ
+    kana: じ・てん・しゃ
     translations:
     - ca: bicicleta
       en: bicycle
       es: bicicleta
   - word: 回転
-    kana: かいてん
+    kana: かい・てん
     translations:
     - ca: fer voltes; rotar
       en: rolling
       es: dar vueltas; rotar
   - word: 転勤
-    kana: てんきん
+    kana: てん・きん
     translations:
     - ca: trasllat de feina
       en: job transfer
