--- a/_kanji/0278.md
+++ b/_kanji/0278.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 帰る
-    kana: かえる
+    kana: かえ・る
     translations:
     - ca: tornar (a casa, propi país, &c.)
       en: to return
       es: volver (a casa, propio país. &c.)
   - word: 帰国する
-    kana: きこくする
+    kana: き・こく・する
     translations:
     - ca: tornar al propi país
       en: to return one's country
       es: volver al propio país
   - word: お帰りなさい
-    kana: おかえりなさい
+    kana: お・かえ・りなさい
     translations:
     - ca: benvingut -uda
       en: welcome home
