--- a/_kanji/0279.md
+++ b/_kanji/0279.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 出発する
-    kana: しゅっぱつする
+    kana: しゅっ・ぱつ・する
     translations:
     - ca: partir; posar-se en camí
       en: to leave
       es: partir; ponerse en camino
   - word: 発見
-    kana: はっけん
+    kana: はっ・けん
     translations:
     - ca: descoberta; troballa
       en: discovery
       es: descubrimiento; hallazgo
   - word: 発明
-    kana: はつめい
+    kana: はつ・めい
     translations:
     - ca: invenció
       en: invention
       es: invención
   - word: 発車
-    kana: はっしゃ
+    kana: はっ・しゃ
     translations:
     - ca: partida d'un vehicle
       en: departure
