--- a/_kanji/0280.md
+++ b/_kanji/0280.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 着る
-    kana: きる
+    kana: き・る
     translations:
     - ca: vestir-se
       en: to put on clothes
       es: vestirse
   - word: 着く
-    kana: つく
+    kana: つ・く
     translations:
     - ca: arribar a un lloc
       en: to arrive
       es: llegar a un sitio
   - word: 着物
-    kana: きもの
+    kana: き・もの
     translations:
     - ca: kimono
       en: clothes; kimono
       es: kimono
   - word: 着信（メール）
-    kana: ちゃくしん（メール）
+    kana: ちゃく・しん（メール）
     translations:
     - ca: rebre una comunicació
       en: incoming e-mail
