--- a/_kanji/0281.md
+++ b/_kanji/0281.md
@@ -17,13 +17,13 @@ meaning:
 
 compound_words:
   - word: 漢字
-    kana: かんじ
+    kana: かん・じ
     translations:
     - ca: Kanji
       en: Chinese character
       es: Kanji
   - word: 漢方薬
-    kana: かんぽうやく
+    kana: かん・ぽう・やく
     translations:
     - ca: herba medicinal xinesa
       en: Chinese herbal medicine
