--- a/_kanji/0282.md
+++ b/_kanji/0282.md
@@ -23,19 +23,19 @@ compound_words:
       en: letter
       es: letra
   - word: 漢字
-    kana: かんじ
+    kana: かん・じ
     translations:
     - ca: Kanji
       en: Chinese character
       es: Kanji
   - word: 活字
-    kana: かつじ
+    kana: かつ・じ
     translations:
     - ca: tipografia de lletra
       en: type
       es: tipografía de letra
   - word: 習字
-    kana: しゅうじ
+    kana: しゅう・じ
     translations:
     - ca: cal·ligrafia
       en: calligraphy
