--- a/_kanji/0283.md
+++ b/_kanji/0283.md
@@ -23,19 +23,19 @@ compound_words:
       en: sentence
       es: frase
   - word: 文学
-    kana: ぶんがく
+    kana: ぶん・がく
     translations:
     - ca: literatura
       en: literature
       es: literatura
   - word: 文字
-    kana: もじ
+    kana: も・じ
     translations:
     - ca: caràcters; alfabet
       en: character
       es: caracteres; alfabeto
   - word: 注文する
-    kana: ちゅうもんする
+    kana: ちゅう・もん・する
     translations:
     - ca: fer una comanda
       en: to order
