--- a/_kanji/0284.md
+++ b/_kanji/0284.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 教える
-    kana: おしえる
+    kana: おし・える
     translations:
     - ca: ensenyar; informar
       en: to teach
       es: enseñar; informar
   - word: 教室
-    kana: きょうしつ
+    kana: きょう・しつ
     translations:
     - ca: aula
       en: classroom
       es: aula
   - word: 教科書
-    kana: きょうかしょ
+    kana: きょう・か・しょ
     translations:
     - ca: llibre de text
       en: textbook
       es: libro de texto
   - word: 教会
-    kana: きょうかい
+    kana: きょう・かい
     translations:
     - ca: església
       en: church
