--- a/_kanji/0285.md
+++ b/_kanji/0285.md
@@ -17,7 +17,7 @@ meaning:
 
 compound_words:
   - word: 勉強する
-    kana: べんきょうする
+    kana: べん・きょう・する
     translations:
     - ca: estudiar
       en: to study
