--- a/_kanji/0286.md
+++ b/_kanji/0286.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 習う
-    kana: ならう
+    kana: なら・う
     translations:
     - ca: aprendre
       en: to learn
       es: aprender
   - word: 練習
-    kana: れんしゅう
+    kana: れん・しゅう
     translations:
     - ca: pràctica; exercici; entrenament
       en: practice
       es: práctica; ejercicio; entrenamiento
   - word: 復習する
-    kana: ふくしゅうする
+    kana: ふく・しゅう・する
     translations:
     - ca: repassar
       en: to review
       es: repasar
   - word: 習慣
-    kana: しゅうかん
+    kana: しゅう・かん
     translations:
     - ca: hàbit; costum
       en: custom
