--- a/_kanji/0287.md
+++ b/_kanji/0287.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 英語
-    kana: えいご
+    kana: えい・ご
     translations:
     - ca: Anglès (llengua)
       en: English
       es: Inglés (lengua)
   - word: 英国
-    kana: えいこく
+    kana: えい・こく
     translations:
     - ca: Anglaterra
       en: England
       es: Inglaterra
   - word: 英雄
-    kana: えいゆう
+    kana: えい・ゆう
     translations:
     - ca: heroi heroïna
       en: hero
