--- a/_kanji/0289.md
+++ b/_kanji/0289.md
@@ -17,7 +17,7 @@ meaning:
 
 compound_words:
   - word: 研究する
-    kana: けんきゅうする
+    kana: けん・きゅう・する
     translations:
     - ca: fer recerca
       en: do research
