--- a/_kanji/0290.md
+++ b/_kanji/0290.md
@@ -17,13 +17,13 @@ meaning:
 
 compound_words:
   - word: 研究者
-    kana: けんきゅうしゃ
+    kana: けん・きゅう・しゃ
     translations:
     - ca: investigador -a
       en: researcher
       es: investigador, ra
   - word: 研究室
-    kana: けんきゅうしつ
+    kana: けん・きゅう・しつ
     translations:
     - ca: sala de recerca; laboratori
       en: laboratory
