--- a/_kanji/0288.md
+++ b/_kanji/0288.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 考える
-    kana: かんがえる
+    kana: かんが・える
     translations:
     - ca: pensar
       en: to think
       es: pensar
   - word: 考古学
-    kana: こうこがく
+    kana: こう・こ・がく
     translations:
     - ca: arqueologia
       en: archaeology
       es: arqueología
   - word: 参考書
-    kana: さんこうしょ
+    kana: さん・こう・しょ
     translations:
     - ca: llibre de consulta
       en: reference book
