--- a/_kanji/0291.md
+++ b/_kanji/0291.md
@@ -16,7 +16,7 @@ meaning:
       es: たずねる (preguntar)
 
 compound_words:
-  - word: 問
+  - word: 問い
     kana: とい
     translations:
     - ca: pregunta
