--- a/_kanji/0081.md
+++ b/_kanji/0081.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 行く
-    kana: いく
+    kana: い・く
     translations:
     - ca: anar
       en: to go
       es: ir
   - word: 行き方
-    kana: いきかた
+    kana: い・き・かた
     translations:
     - ca: com arribar a
       en: how to get to
       es: cómo llegar a
   - word: 銀行
-    kana: ぎんこう
+    kana: ぎん・こう
     translations:
     - ca: banc
       en: bank
       es: banco
   - word: 三行目
-    kana: さんぎょうめ
+    kana: さん・ぎょう・め
     translations:
     - ca: la tercera línia (d'un text)
       en: the third line (in a text)
