--- a/_kanji/0082.md
+++ b/_kanji/0082.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 来る
-    kana: くる
+    kana: く・る
     translations:
     - ca: venir
       en: to come
       es: venir
   - word: 来年
-    kana: らいねん
+    kana: らい・ねん
     translations:
     - ca: l'any que ve
       en: next year
       es: el año que viene
   - word: 来週
-    kana: らいしゅう
+    kana: らい・しゅう
     translations:
     - ca: la setmana que ve
       en: next week
       es: la semana que viene
   - word: 将来
-    kana: しょうらい
+    kana: しょう・らい
     translations:
     - ca: futur (proper)
       en: future (near)
