--- a/_kanji/0083.md
+++ b/_kanji/0083.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 食べる
-    kana: たべる
+    kana: た・べる
     translations:
     - ca: menjar
       en: to eat
       es: comer
   - word: 外食する
-    kana: がいしょくする
+    kana: がい・しょく・する
     translations:
     - ca: menjar fora
       en: to eat out
       es: comer fuera
   - word: 食料品
-    kana: しょくりょうひん
+    kana: しょく・りょう・ひん
     translations:
     - ca: producte alimentari
       en: food
       es: producto alimentario
   - word: 食堂
-    kana: しょくどう
+    kana: しょく・どう
     translations:
     - ca: menjador
       en: dining hall
