--- a/_kanji/0084.md
+++ b/_kanji/0084.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 見る
-    kana: みる
+    kana: み・る
     translations:
     - ca: veure; mirar
       en: to see; to look at
       es: ver; mirar
   - word: 見せる
-    kana: みせる
+    kana: み・せる
     translations:
     - ca: mostrar
       en: to show
       es: mostrar
   - word: 見学する
-    kana: けんがくする
+    kana: けん・がく・する
     translations:
     - ca: visita educativa
       en: educational visit
       es: visita educativa
   - word: 意見
-    kana: いけん
+    kana: い・けん
     translations:
     - ca: opinió
       en: opinion
