--- a/_kanji/0085.md
+++ b/_kanji/0085.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 入る
-    kana: はいる
+    kana: はい・る
     translations:
     - ca: entrar
       en: to enter
       es: entrar
   - word: 入れる
-    kana: いれる
+    kana: い・れる
     translations:
     - ca: posar a dins
       en: to put in
       es: meter en
   - word: 入口
-    kana: いりぐち
+    kana: いり・ぐち
     translations:
     - ca: entrada
       en: entrance
       es: entrada
   - word: 入学する
-    kana: にゅうがくする
+    kana: にゅう・がく・する
     translations:
     - ca: matricular-se
       en: to matriculate
