--- a/_kanji/0086.md
+++ b/_kanji/0086.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 出る
-    kana: でる
+    kana: で・る
     translations:
     - ca: sortir
       en: to go/come out
       es: salir
   - word: 出す
-    kana: だす
+    kana: だ・す
     translations:
     - ca: treure
       en: to take out
       es: sacar
   - word: 出口
-    kana: でぐち
+    kana: で・ぐち
     translations:
     - ca: sortida
       en: exit
       es: salida
   - word: 出席する
-    kana: しゅっせきする
+    kana: しゅっ・せき・する
     translations:
     - ca: assitir
       en: to attend
