--- a/_kanji/0087.md
+++ b/_kanji/0087.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 立つ
-    kana: たつ
+    kana: た・つ
     translations:
     - ca: posar-se dret
       en: to stand
       es: levantarse
   - word: 立食パーティー
-    kana: りっしょくパーティー
+    kana: りっ・しょく・パーティー
     translations:
     - ca: festa de buffet
       en: (standing) buffet party​
       es: fiesta de buffet
   - word: 国立大学
-    kana: こくりつだいがく
+    kana: こく・りつ・だい・がく
     translations:
     - ca: universitat nacional
       en: national university
