--- a/_kanji/0088.md
+++ b/_kanji/0088.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 書く
-    kana: かく
+    kana: か・く
     translations:
     - ca: escriure
       en: to write
       es: escribir
   - word: 読書
-    kana: どくしょ
+    kana: どく・しょ
     translations:
     - ca: lectura
       en: reading books
       es: lectura
   - word: 下書き
-    kana: したがき
+    kana: した・が・き
     translations:
     - ca: esborrany
       en: draft
       es: borrador
   - word: 辞書
-    kana: じしょ
+    kana: じ・しょ
     translations:
     - ca: diccionari
       en: dictionary
