--- a/_kanji/0090.md
+++ b/_kanji/0090.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 飲む
-    kana: のむ
+    kana: の・む
     translations:
     - ca: beure
       en: to drink
       es: beber
   - word: 飲み物
-    kana: のみもの
+    kana: の・み・もの
     translations:
     - ca: beguda
       en: beverage
       es: bebida
   - word: 飲食店
-    kana: いんしょくてん
+    kana: いん・しょく・てん
     translations:
     - ca: restaurants
       en: restaurants
