--- a/_kanji/0091.md
+++ b/_kanji/0091.md
@@ -17,7 +17,7 @@ meaning:
 
 compound_words:
   - word: 話す
-    kana: はなす
+    kana: はな・す
     translations:
     - ca: parlar
       en: to speak/talk
@@ -29,13 +29,13 @@ compound_words:
       en: story
       es: historia
   - word: 電話
-    kana: でんわ
+    kana: でん・わ
     translations:
     - ca: telèfon
       en: telephone
       es: teléfono
   - word: 会話
-    kana: かいわ
+    kana: かい・わ
     translations:
     - ca: conversa
       en: conversation
