--- a/_kanji/0092.md
+++ b/_kanji/0092.md
@@ -17,13 +17,13 @@ meaning:
 
 compound_words:
   - word: 読む
-    kana: よむ
+    kana: よ・む
     translations:
     - ca: llegir
       en: to read
       es: leer
   - word: 読書
-    kana: どくしょ
+    kana: どく・しょ
     translations:
     - ca: lectura
       en: reading books
