--- a/_kanji/0093.md
+++ b/_kanji/0093.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 日本語
-    kana: にほんご
+    kana: に・ほん・ご
     translations:
     - ca: japonès (llengua)
       en: Japanese language
       es: japonés (lengua)
   - word: 中国語
-    kana: ちゅうごくご
+    kana: ちゅう・ごく・ご
     translations:
     - ca: xinès (llengua)
       en: Chinese language
       es: chino (lengua)
   - word: 外国語
-    kana: がいこくご
+    kana: がい・こく・ご
     translations:
     - ca: llengua estrangera
       en: foreign language
