--- a/_kanji/0094.md
+++ b/_kanji/0094.md
@@ -23,19 +23,19 @@ compound_words:
       en: between
       es: entre
   - word: 時間
-    kana: じかん
+    kana: じ・かん
     translations:
     - ca: temps
       en: time
       es: tiempo
   - word: 一年間
-    kana: いちねんかん
+    kana: いち・ねん・かん
     translations:
     - ca: (per) un any
       en: (for) a year
       es: (por) un año
   - word: 間に合う
-    kana: まにあう
+    kana: ま・に・あ・う
     translations:
     - ca: arribar a l'hora
       en: to be time
