--- a/_kanji/0095.md
+++ b/_kanji/0095.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 聞く
-    kana: きく
+    kana: き・く
     translations:
     - ca: escoltar
       en: to listen to
       es: escuchar
   - word: 聞こえる
-    kana: きこえる
+    kana: き・こえる
     translations:
     - ca: ser escoltat; ser audible
       en: can be heard
       es: ser escuchado; ser audible
   - word: 新聞
-    kana: しんぶん
+    kana: しん・ぶん
     translations:
     - ca: diari; periòdic
       en: newspaper
