--- a/_kanji/0096.md
+++ b/_kanji/0096.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 買う
-    kana: かう
+    kana: か・う
     translations:
     - ca: comprar
       en: to buy
       es: comprar
   - word: 買い物する
-    kana: かいものする
+    kana: か・い・もの・する
     translations:
     - ca: anar de compres
       en: to shop
       es: ir de compras
   - word: 売買する
-    kana: ばいばいする
+    kana: ばい・ばい・する
     translations:
     - ca: comprar i vendre
       en: to buy and sell
