--- a/_kanji/0097.md
+++ b/_kanji/0097.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 休む
-    kana: やすむ
+    kana: やす・む
     translations:
     - ca: descansar
       en: to rest
       es: descansar
   - word: 休み
-    kana: やすみ
+    kana: やす・み
     translations:
     - ca: vacances (descans)
       en: holiday (break)
       es: vacaciones (descanso)
   - word: 休日
-    kana: きゅうじつ
+    kana: きゅう・じつ
     translations:
     - ca: vacances (dia lliure)
       en: holiday (day off)
       es: vacaciones (día libre)
   - word: 夏休み
-    kana: なつやすみ
+    kana: なつ・やす・み
     translations:
     - ca: vacances d'estiu
       en: summer vacation
