--- a/_kanji/0098.md
+++ b/_kanji/0098.md
@@ -23,19 +23,19 @@ compound_words:
       en: time; when
       es: tiempo; cuando
   - word: ４時
-    kana: よじ
+    kana: よ・じ
     translations:
     - ca: les 4 en punt
       en: 4 o'clock
       es: las 4 en punto
   - word: １時間
-    kana: いちじかん
+    kana: いち・じ・かん
     translations:
     - ca: una hora
       en: one hour
       es: una hora
   - word: 時計
-    kana: とけい
+    kana: と・けい
     translations:
     - ca: rellotge
       en: clock; watch
