--- a/_kanji/0099.md
+++ b/_kanji/0099.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: １週間
-    kana: いっしゅうかん
+    kana: いっ・しゅう・かん
     translations:
     - ca: una setmana
       en: one week
       es: una semana
   - word: 来週
-    kana: らいしゅう
+    kana: らい・しゅう
     translations:
     - ca: la setmana que ve
       en: next week
       es: la semana que viene
   - word: 先週
-    kana: せんしゅう
+    kana: せん・しゅう
     translations:
     - ca: la setmana passada
       en: last week
       es: la semana pasada
   - word: 今週
-    kana: こんしゅう
+    kana: こん・しゅう
     translations:
     - ca: aquesta setmana
       en: this week
