--- a/_kanji/0100.md
+++ b/_kanji/0100.md
@@ -23,19 +23,19 @@ compound_words:
       en: street; road; way
       es: calle; camino
   - word: 車道
-    kana: しゃどう
+    kana: しゃ・どう
     translations:
     - ca: carretera
       en: roadway
       es: calzada
   - word: 水道
-    kana: すいどう
+    kana: すい・どう
     translations:
     - ca: proveïment d'aigua
       en: water supply
       es: suministro de agua
   - word: 書道
-    kana: しょどう
+    kana: しょ・どう
     translations:
     - ca: caligrafia
       en: calligraphy
