--- a/_kanji/0102.md
+++ b/_kanji/0102.md
@@ -16,25 +16,25 @@ meaning:
 
 compound_words:
   - word: 会う
-    kana: あう
+    kana: あ・う
     translations:
     - ca: trobar-se amb
       en: to meet
       es: encontrarse con
   - word: 会話
-    kana: かいわ
+    kana: かい・わ
     translations:
     - ca: conversa
       en: conversation
       es: conversación
   - word: 新年会
-    kana: しんねんかい
+    kana: しん・ねん・かい
     translations:
     - ca: festa d'Any Nou
       en: New Year's party
       es: fiesta de Año Nuevo
   - word: 会議
-    kana: かいぎ
+    kana: かい・ぎ
     translations:
     - ca: reunió
       en: meeting
