--- a/_kanji/0103.md
+++ b/_kanji/0103.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 社会
-    kana: しゃかい
+    kana: しゃ・かい
     translations:
     - ca: societat
       en: society
       es: sociedad
   - word: 会社
-    kana: かいしゃ
+    kana: かい・しゃ
     translations:
     - ca: empresa
       en: company
       es: compañía
   - word: 社長
-    kana: しゃちょう
+    kana: しゃ・ちょう
     translations:
     - ca: president presidenta de l'empresa
       en: president of the company
       es: presidente, ta de la compañía
   - word: 神社
-    kana: じんじゃ
+    kana: じん・じゃ
     translations:
     - ca: santuari shintō
       en: shintō shrine
