--- a/_kanji/0104.md
+++ b/_kanji/0104.md
@@ -23,13 +23,13 @@ compound_words:
       en: shop
       es: tienda
   - word: 店員
-    kana: てんいん
+    kana: てん・いん
     translations:
     - ca: dependent dependenta
       en: shop assistant
       es: dependiente, ta
   - word: 売店
-    kana: ばいてん
+    kana: ばい・てん
     translations:
     - ca: estand; quiosc
       en: stand; kiosk
