--- a/_kanji/0105.md
+++ b/_kanji/0105.md
@@ -23,13 +23,13 @@ compound_words:
       en: station
       es: estación
   - word: 駅長
-    kana: えきちょう
+    kana: えき・ちょう
     translations:
     - ca: cap d'estació
       en: station manager
       es: jefe, fa de estación
   - word: 駅前
-    kana: えきまえ
+    kana: えき・まえ
     translations:
     - ca: al voltant de l'estació
       en: around the station
