--- a/_kanji/0106.md
+++ b/_kanji/0106.md
@@ -23,19 +23,19 @@ compound_words:
       en: flower
       es: flor
   - word: 花見
-    kana: はなみ
+    kana: はな・み
     translations:
     - ca: Hanami (veure flors)
       en: Hanami (cherry-blossom viewing)
       es: Hanami (ver flores)
   - word: 花火
-    kana: はなび
+    kana: はな・び
     translations:
     - ca: focs artificials
       en: fireworks
       es: fuegos artificiales
   - word: 花屋
-    kana: はなや
+    kana: はな・や
     translations:
     - ca: florista
       en: florist
