--- a/_kanji/0107.md
+++ b/_kanji/0107.md
@@ -23,19 +23,19 @@ compound_words:
       en: country; nation
       es: país; nación
   - word: 外国
-    kana: がいこく
+    kana: がい・こく
     translations:
     - ca: país estranger
       en: foreign country
       es: país extranjero
   - word: 中国
-    kana: ちゅうごく
+    kana: ちゅう・ごく
     translations:
     - ca: la China
       en: China
       es: China
   - word: 国際会議
-    kana: こくさいかいぎ
+    kana: こく・さい・かい・ぎ
     translations:
     - ca: conferència internacional
       en: international conference
