--- a/_kanji/0109.md
+++ b/_kanji/0109.md
@@ -23,19 +23,19 @@ compound_words:
       en: sky
       es: cielo
   - word: 空気
-    kana: くうき
+    kana: くう・き
     translations:
     - ca: aire
       en: air
       es: aire
   - word: 大空
-    kana: おおぞら
+    kana: おお・ぞら
     translations:
     - ca: firmament
       en: big sky
       es: firmamento
   - word: 空港
-    kana: くうこう
+    kana: くう・こう
     translations:
     - ca: aeroport
       en: airport
