--- a/_kanji/0110.md
+++ b/_kanji/0110.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 電車
-    kana: でんしゃ
+    kana: でん・しゃ
     translations:
     - ca: tren
       en: train
       es: tren
   - word: 電話
-    kana: でんわ
+    kana: でん・わ
     translations:
     - ca: telèfon
       en: telephone
       es: teléfono
   - word: 電気
-    kana: でんき
+    kana: でん・き
     translations:
     - ca: electricitat
       en: electricity
       es: electricidad
   - word: 電池
-    kana: でんち
+    kana: でん・ち
     translations:
     - ca: bateria
       en: battery
