--- a/_kanji/0297.md
+++ b/_kanji/0297.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 答える
-    kana: こたえる
+    kana: こた・える
     translations:
     - ca: contestar; respondre
       en: to answer
       es: contestar; responder
   - word: 答え
-    kana: こたえ
+    kana: こた・え
     translations:
     - ca: resposta
       en: answer
       es: respuesta
   - word: 解答
-    kana: かいとう
+    kana: かい・とう
     translations:
     - ca: respostes; solucions
       en: answer
