--- a/_kanji/0298.md
+++ b/_kanji/0298.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 用事
-    kana: ようじ
+    kana: よう・じ
     translations:
     - ca: afer; cosa a fer
       en: business
       es: asunto; que hacer
   - word: 利用する
-    kana: りようする
+    kana: り・よう・する
     translations:
     - ca: utilitzar; aprofitar
       en: to use
       es: utilizar; aprovechar
   - word: 子供用
-    kana: こどもよう
+    kana: こ・ども・よう
     translations:
     - ca: per a ús infantil
       en: for children
       es: para uso infantil
   - word: 使用禁止
-    kana: しようきんし
+    kana: し・よう・きん・し
     translations:
     - ca: prohibit utilitzar
       en: Do not use.
