--- a/_kanji/0299.md
+++ b/_kanji/0299.md
@@ -23,19 +23,19 @@ compound_words:
       en: paper
       es: papel
   - word: 手紙
-    kana: てがみ
+    kana: て・がみ
     translations:
     - ca: carta
       en: letter
       es: carta
   - word: コピー用紙
-    kana: コピーようし
+    kana: コピー・よう・し
     translations:
     - ca: paper per a fotocòpies
       en: photocopying paper
       es: papel para fotocopias
   - word: 新聞紙
-    kana: しんぶんし
+    kana: しん・ぶん・し
     translations:
     - ca: paper de diari; diari
       en: a piece of newspaper
