--- a/_kanji/0300.md
+++ b/_kanji/0300.md
@@ -17,25 +17,25 @@ meaning:
 
 compound_words:
   - word: 意味
-    kana: いみ
+    kana: い・み
     translations:
     - ca: signgicat
       en: meaning
       es: significado
   - word: 注意する
-    kana: ちゅういする
+    kana: ちゅう・い・する
     translations:
     - ca: parar atenció; advertir
       en: to pay attention
       es: prestar atención; advertir
   - word: 用意する
-    kana: よういする
+    kana: よう・い・する
     translations:
     - ca: preparar
       en: to prepare
       es: preparar
   - word: 意見
-    kana: いけん
+    kana: い・けん
     translations:
     - ca: opinió
       en: opinion
