--- a/_kanji/0089.md
+++ b/_kanji/0089.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 言う
-    kana: いう
+    kana: い・う
     translations:
     - ca: dir
       en: to say
       es: decir
   - word: 言語
-    kana: げんご
+    kana: げん・ご
     translations:
     - ca: llengua (idioma)
       en: language
       es: lengua (idioma)
   - word: 伝言
-    kana: でんごん
+    kana: でん・ごん
     translations:
     - ca: missatge
       en: message
