--- a/_kanji/0101.md
+++ b/_kanji/0101.md
@@ -23,13 +23,13 @@ compound_words:
       en: now
       es: ahora
   - word: 今月
-    kana: こんげつ
+    kana: こん・げつ
     translations:
     - ca: aquest mes
       en: this month
       es: este mes
   - word: 今年
-    kana: ことし
+    kana: こ・とし
     translations:
     - ca: enguany
       en: this year
