--- a/_kanji/0108.md
+++ b/_kanji/0108.md
@@ -17,19 +17,19 @@ meaning:
 
 compound_words:
   - word: 白い
-    kana: しろい
+    kana: しろ・い
     translations:
     - ca: blanc -a
       en: white
       es: blanco, ca
   - word: 白書
-    kana: はくしょ
+    kana: はく・しょ
     translations:
     - ca: llibre blanc
       en: white paper
       es: libro blanco
   - word: 真っ白
-    kana: まっしろ
+    kana: まっ・しろ
     translations:
     - ca: blanc pur
       en: pure white
