--- a/_kanji/0300.md
+++ b/_kanji/0300.md
@@ -19,7 +19,7 @@ compound_words:
   - word: 意味
     kana: い・み
     translations:
-    - ca: signgicat
+    - ca: signicat
       en: meaning
       es: significado
   - word: 注意する
